Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118643

REG->6.7 : Fusion style QDockWidget buttons are too large

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.0 FF
    • 6.7
    • Widgets: Styles
    • None
    • All
    • 04f4b2777 (dev), acdef6669 (dev), 8eb599566 (dev), c63ecb05c (6.7)

      Steps to reproduce:

      • Launch examples/widgets/tools/undoframework or Qt Designer
      • Note close button is too large

      Most likely related to the changes for for QTBUG-118122 (cannot pinpoint which).

      (qtbase /  dev at b26818}13bb9fcdae69df6e12641a080a6796493b97dd92 ).

      Screens: 1, High DPI scaling: inactive
      # 0 "DVI-D-0" Depth: 24 Primary: yes
        Geometry: 1680x1050+0+0 Available: 1680x1014+0+0
        Physical size: 478x300 mm  Refresh: 59.9543 Hz Power state: 0
        Physical DPI: 89.272,88.9 Logical DPI: 96,96 Subpixel_None
        DevicePixelRatio: 1
        Primary orientation: 2 Orientation: 2 Native orientation: 0
      

        1. qtbug118643.jpg
          31 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-118643
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes